[gd_scene load_steps=3 format=3 uid="uid://co4r47y6dcuw7"]

[ext_resource type="Script" path="res://world/areas/AreaTransition.gd" id="1_oxuwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty46s"]

[node name="AreaTransition" type="Area2D" groups=["area_transitions"]]
script = ExtResource("1_oxuwv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ty46s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
